Assignment/NetworkPolicy-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
spec:
  podSelector:
    matchLabels:
      app: db
    policyTypes:
      - Ingress
      - Egress
    ingress:
      - from:
        - podSelector:
            matchLabels:
              app: frontend
        - namespaceSelector:
            matchLabels:
              name: dev
        ports:
          - protocol: TCP
            port: 8080
